css/media.css
@media only screen and (max-width: 375px) {
  html,
  body {
    overflow-x: hidden;
    padding: 10px;
  }

  .landing__container {
    flex-direction: column;
  }

  .image {
    height: 30vh;
    width: 100%;
  }

  .panel:nth-of-type(1),
  .panel:nth-of-type(2) {
    display: none;
  }

  .panel {
    flex: 1;
  }

  .panel__description {
    opacity: 1;
  }

  .landing__container-description h1 {
    font-weight: 600;
    font-size: 28px;
    line-height: 36px;
  }

  .showcase-header {
    font-size: 28px !important;
    line-height: 36px !important;
    text-align: center;
    margin: 15px 0;
  }

  #navbar__list {
    flex-direction: column;
    gap: 3em;
    position: fixed;
    inset: 0 0 0 40%;
    padding: 40px 2em;
    background-color: hsl(0, 0%, 100%, 0.6);
    backdrop-filter: blur(0.4rem);
    justify-content: start;
    transform: translateX(100%);
    transition: transform 350ms ease-out;
  }

  #navbar__list[data-visible="true"] {
    transform: translateX(0);
  }

  #navbar__list li {
    font-size: 21px;
    line-height: 30px;
    text-align: left;
    border-bottom: 1px solid pink;
    padding-bottom: 8px;
  }

  .mobile-nav-toggle {
    position: absolute;
    top: 0.4rem;
    right: 0.3rem;
  }

  .fa {
    float: right;
    display: block;
  }
}

@media only screen and (min-width: 375px) {
  .mobile-nav-toggle {
    display: none;
  }
}

